fix the issue where version 12.0.1 failed to build due to the previous modification

--- a/.github/workflows/clang-tools-amd64.yml
+++ b/.github/workflows/clang-tools-amd64.yml
@@ -158,7 +158,7 @@ jobs:
       if: ${{ matrix.clang-version < 5 }}
       run: cmake --build ${{ matrix.release }}/build ${{ matrix.build-args }} --target clang-format clang-query clang-tidy clang-apply-replacements
     - name: build
-      if: ${{ matrix.clang-version >= 5 }}
+      if: ${{ matrix.clang-version >= 5 || matrix.clang-version == '12.0.1' }}
       run: cmake --build ${{ matrix.release }}/build ${{ matrix.build-args }} --target clang-format clang-query clang-tidy clang-apply-replacements clangd
     - name: print dependencies
       if: ${{ matrix.os == 'macosx' }}
