--- a/.github/workflows/clang-tools-amd64.yml
+++ b/.github/workflows/clang-tools-amd64.yml
@@ -8,38 +8,40 @@ jobs:
   build:
     strategy:
       matrix:
-        clang-version: [ 3.9, 4, 5, 6, 7, 8, 9, 10, 11, 12, 12.0.1, 13, 14, 15, 16, 17, 18, 19, 20 ]
-        os: [ linux, macosx, windows ]
+        # clang-version: [ 3.9, 4, 5, 6, 7, 8, 9, 10, 11, 12, 12.0.1, 13, 14, 15, 16, 17, 18, 19, 20 ]
+        clang-version: [ 15, 16, 17, 18, 19, 20 ]
+        # os: [ linux, macosx, windows ]
+        os: [ macosx ]
         include:
-          - clang-version: 3.9
-            release: llvm-project-3.9.1
-          - clang-version: 4
-            release: llvm-project-4.0.1
-          - clang-version: 5
-            release: llvm-project-5.0.2
-          - clang-version: 6
-            release: llvm-project-6.0.1
-          - clang-version: 7
-            release: llvm-project-7.1.0
-          - clang-version: 8
-            release: llvm-project-8.0.1
-            extra-cmake-args: '-DCLANG_ANALYZER_ENABLE_Z3_SOLVER=OFF'
-          - clang-version: 9
-            release: llvm-project-9.0.1
-            extra-cmake-args: '-DLLVM_ENABLE_Z3_SOLVER=OFF'
-          - clang-version: 10
-            release: llvm-project-10.0.1
-            extra-cmake-args: '-DLLVM_ENABLE_Z3_SOLVER=OFF'
-          - clang-version: 11
-            release: llvm-project-11.1.0.src
-          - clang-version: 12
-            release: llvm-project-12.0.0.src
-          - clang-version: 12.0.1
-            release: llvm-project-12.0.1.src
-          - clang-version: 13
-            release: llvm-project-13.0.1.src
-          - clang-version: 14
-            release: llvm-project-14.0.6.src
+          # - clang-version: 3.9
+          #   release: llvm-project-3.9.1
+          # - clang-version: 4
+          #   release: llvm-project-4.0.1
+          # - clang-version: 5
+          #   release: llvm-project-5.0.2
+          # - clang-version: 6
+          #   release: llvm-project-6.0.1
+          # - clang-version: 7
+          #   release: llvm-project-7.1.0
+          # - clang-version: 8
+          #   release: llvm-project-8.0.1
+          #   extra-cmake-args: '-DCLANG_ANALYZER_ENABLE_Z3_SOLVER=OFF'
+          # - clang-version: 9
+          #   release: llvm-project-9.0.1
+          #   extra-cmake-args: '-DLLVM_ENABLE_Z3_SOLVER=OFF'
+          # - clang-version: 10
+          #   release: llvm-project-10.0.1
+          #   extra-cmake-args: '-DLLVM_ENABLE_Z3_SOLVER=OFF'
+          # - clang-version: 11
+          #   release: llvm-project-11.1.0.src
+          # - clang-version: 12
+          #   release: llvm-project-12.0.0.src
+          # - clang-version: 12.0.1
+          #   release: llvm-project-12.0.1.src
+          # - clang-version: 13
+          #   release: llvm-project-13.0.1.src
+          # - clang-version: 14
+          #   release: llvm-project-14.0.6.src
           - clang-version: 15
             release: llvm-project-15.0.7.src
           - clang-version: 16
@@ -52,13 +54,13 @@ jobs:
             release: llvm-project-19.1.7.src
           - clang-version: 20
             release: llvm-project-20.1.2.src
-          - os: linux
-            runner: ubuntu-20.04
-            os-cmake-args: '-DLLVM_BUILD_STATIC=ON -DCMAKE_CXX_FLAGS="-s -flto" ${POSIX_CMAKE_ARGS} ${LINUX_CMAKE_ARGS}'
-            build-args: '-j$(nproc)'
-            bindir: '/build/bin'
-            dotexe: ''
-            shacmd: 'sha512sum'
+          # - os: linux
+          #   runner: ubuntu-20.04
+          #   os-cmake-args: '-DLLVM_BUILD_STATIC=ON -DCMAKE_CXX_FLAGS="-s -flto" ${POSIX_CMAKE_ARGS} ${LINUX_CMAKE_ARGS}'
+          #   build-args: '-j$(nproc)'
+          #   bindir: '/build/bin'
+          #   dotexe: ''
+          #   shacmd: 'sha512sum'
           - os: macosx
             runner: macos-13
             os-cmake-args: '-DCMAKE_CXX_FLAGS="-static-libgcc -static-libstdc++ -flto" -DCMAKE_OSX_DEPLOYMENT_TARGET=10.15 ${POSIX_CMAKE_ARGS} ${MACOS_CMAKE_ARGS}'
@@ -66,21 +68,21 @@ jobs:
             bindir: '/build/bin'
             dotexe: ''
             shacmd: 'shasum -a512'
-          - os: windows
-            runner: windows-latest
-            os-cmake-args: '-Thost=x64 -DCMAKE_CXX_FLAGS="/MP /std:c++14" -DLLVM_USE_CRT_MINSIZEREL="MT"'
-            build-args: '--config MinSizeRel'
-            bindir: '/build/MinSizeRel/bin'
-            dotexe: '.exe'
-            shacmd: 'sha512sum.exe'
-            extra-tar-args: '--exclude=${RELEASE}/clang/test/Driver/Inputs/* --exclude=${RELEASE}/libcxx/test/std/input.output/filesystems/Inputs/static_test_env/* --exclude=${RELEASE}/libclc/amdgcn-mesa3d'
-            extra-tar-args-cfe: '--exclude=cfe-${version}.src/test/Driver/Inputs/*'
-    runs-on: ${{ matrix.runner }}
+          # - os: windows
+          #   runner: windows-latest
+          #   os-cmake-args: '-Thost=x64 -DCMAKE_CXX_FLAGS="/MP /std:c++14" -DLLVM_USE_CRT_MINSIZEREL="MT"'
+          #   build-args: '--config MinSizeRel'
+          #   bindir: '/build/MinSizeRel/bin'
+          #   dotexe: '.exe'
+          #   shacmd: 'sha512sum.exe'
+          #   extra-tar-args: '--exclude=${RELEASE}/clang/test/Driver/Inputs/* --exclude=${RELEASE}/libcxx/test/std/input.output/filesystems/Inputs/static_test_env/* --exclude=${RELEASE}/libclc/amdgcn-mesa3d'
+          #   extra-tar-args-cfe: '--exclude=cfe-${version}.src/test/Driver/Inputs/*'
+    runs-on: macos-13
     env:
       COMMON_CMAKE_ARGS: '-DBUILD_SHARED_LIBS=OFF -DLLVM_ENABLE_PROJECTS="clang;clang-tools-extra"'
       LINUX_CMAKE_ARGS: '-DCMAKE_CXX_COMPILER=g++-10 -DCMAKE_C_COMPILER=gcc-10'
       # Additional macos flags reduce file sizes
-      MACOS_CMAKE_ARGS: '-DCMAKE_CXX_COMPILER=g++-14 -DCMAKE_C_COMPILER=gcc-14'
+      MACOS_CMAKE_ARGS: '-DCMAKE_CXX_COMPILER=g++-14 -DCMAKE_C_COMPILER=gcc-14 -DLLVM_ENABLE_ASSERTIONS=OFF -DLLVM_LINK_LLVM_DYLIB=ON -DLLVM_BUILD_LLVM_DYLIB=ON'
       POSIX_CMAKE_ARGS: '-DCMAKE_BUILD_TYPE=MinSizeRel'
       RELEASE: '${{ matrix.release }}'
       suffix: '${{ matrix.clang-version }}_${{ matrix.os }}-amd64'
