update to support packaging of clangd build results and set the compression level to the highest

--- a/.github/workflows/clang-tools-amd64.yml
+++ b/.github/workflows/clang-tools-amd64.yml
@@ -191,7 +191,11 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: clang-tools-${{ matrix.release }}-${{ env.suffix }}
-        path: "${{ matrix.release }}${{ matrix.bindir }}/clang-*-${{ env.suffix }}*"
+        path: |
+          "${{ matrix.release }}${{ matrix.bindir }}/clang-*-${{ env.suffix }}*"
+          "${{ matrix.release }}${{ matrix.bindir }}/clangd-${{ env.suffix }}*"
+        if-no-files-found: ignore
+        compression-level: 9
         retention-days: 1
   draft-release:
     runs-on: ubuntu-22.04
